menu/deco.css
* {
  margin: 0;
  padding: 0;
}
@font-face {
font-family: "MyriadProBold";
src: url("MyriadProBold.ttf");
}
@keyframes move_wave {
    0% {
        transform: translateX(0) translateZ(0) scaleY(1);
    }
    50% {
        transform: translateX(-25%) translateY(-25) scaleY(0.55);
    }
    100% {
        transform: translateX(-50%) translateZ(0) scaleY(1);
    }
}
.waveWrapper {
	filter: grayscale(100%) sepia(100%) hue-rotate(180deg);
    overflow: hidden;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 50vh;
    top: calc(50vh - 136px);
    margin: auto;
}

.bgTop {
    z-index: 15;
    opacity: 0.1;
}
.bgMiddle {
    z-index: 10;
    opacity: 0.2;
}
.bgBottom {
    z-index: 5;
	opacity: 0.3;
}
.wave {
    position: absolute;
    left: 0;
    width: 300%;
    height: 100%;
    background-repeat: repeat no-repeat;
    transform-origin: center bottom;
}
.waveTop {
    background-size: 50% 100px;
}
.waveAnimation .waveTop {
  animation: move-wave 3s;
   -webkit-animation: move-wave 3s;
   -webkit-animation-delay: 1s;
   animation-delay: 1s;
}
.waveMiddle {
    background-size: 50% 120px;
}
.waveAnimation .waveMiddle {
    animation: move_wave 10s linear infinite;
}
.waveBottom {
    background-size: 50% 100px;
}
.waveAnimation .waveBottom {
    animation: move_wave 15s linear infinite;
}

div.loading {
	filter: invert(0.02);
}
div.screentop {
  width: 100vw;
  height: 50vh;
  background-color: #00ccff;
  margin: auto;
}
div.screenbottom {
  width: 100vw;
  height: 50vh;
  background-color: #7de4ff;
  margin: auto;
}
div.logo {
  font-family: 'MyriadProBold';
  color: #FFFFFF;
  font-size: 70px;
  width: 100vw;
  height: 50vh;
  margin: 0 auto;
  -webkit-animation-name: scale-up-center; /* Safari 4.0 - 8.0 */
  -webkit-animation-duration: 2.5s; /* Safari 4.0 - 8.0 */
  animation-name: scale-up-center;
  animation-duration: 2.5s;
}
/* ----------------------------------------------
 * Generated by Animista on 2019-8-25 14:3:40
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation scale-up-center
 * ----------------------------------------
 */
@-webkit-keyframes scale-up-center {
  0% {
    -webkit-transform: scale(0.5);
            transform: scale(0.5);
  }
  100% {
    -webkit-transform: scale(1);
            transform: scale(1);
  }
}
@keyframes scale-up-center {
  0% {
    -webkit-transform: scale(0.5);
            transform: scale(0.5);
  }
  100% {
    -webkit-transform: scale(1);
            transform: scale(1);
  }
}
a {
  text-decoration: none;
  color: #FFFFFF;
}
app {
  padding: 5px;
  border-radius: 15px;
  margin: 25px 25px 25px 5px;
  font-family: 'MyriadProBold';
  color: #FFFFFF;
  font-size: 25px;
  background-color: #00000055
}
appext {
  margin-left: 50px;
  padding: 5px;
  border-radius: 15px;
  font-family: 'MyriadProBold';
  color: #FFFFFF;
  font-size: 25px;
  background-color: #FFFFFF00
}

